# MORETech

./: .gitignore  CNAME  LICENSE  README.md  docker-compose.yml  package-lock.json
.github/workflows/: backend.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  dependecies.py  main.py
backend/app/db/: migrate.py  session.py
backend/app/db/models/: __init__.py  base.py  coupons.py  department_service.py  departments.py  services.py
backend/app/map_api/: yandex.py
backend/app/models/: coupons.py
backend/app/routers/: departments.py  map.py  queue.py  services.py
backend/tests/: test_main.py
client/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.scss  main.tsx
client/src/components/: customDrawer.tsx  mobileDrawer.tsx  sidebar.tsx  topbar.tsx
