[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend of app"
authors = ["d0gied <german.n.u@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.21"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["dotenv", "email"], version = "^2.4.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
